[gd_scene load_steps=7 format=3 uid="uid://bufiurcq0b6j8"]

[ext_resource type="Script" uid="uid://cxfhx4i3hwn5g" path="res://scripts/game_over_screen.gd" id="1_61w2s"]
[ext_resource type="FontFile" uid="uid://nu4rtr5xsgt7" path="res://art/Debrosee-ALPnL.ttf" id="1_iwahs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_61w2s"]
bg_color = Color(0, 0.19044566, 0.35587278, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="LabelSettings" id="LabelSettings_jw6e5"]
font = ExtResource("1_iwahs")
font_size = 70

[sub_resource type="LabelSettings" id="LabelSettings_wa2qn"]
font = ExtResource("1_iwahs")
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_cyfkl"]
font = ExtResource("1_iwahs")
font_size = 50

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_61w2s")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.49019608)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.0
offset_top = -246.0
offset_right = 220.0
offset_bottom = 328.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_61w2s")

[node name="GameOver" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -162.0
offset_top = 41.0
offset_right = 167.0
offset_bottom = 135.0
grow_horizontal = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_jw6e5")

[node name="HighScore" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -150.5
offset_right = 166.0
offset_bottom = -83.5
grow_horizontal = 2
grow_vertical = 2
text = "Hi-Score: 9999"
label_settings = SubResource("LabelSettings_wa2qn")
horizontal_alignment = 1

[node name="Score" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -61.5
offset_right = 140.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
text = "Score: 9999"
label_settings = SubResource("LabelSettings_cyfkl")
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 95.0
offset_top = 319.0
offset_right = 356.0
offset_bottom = 419.0
theme_override_fonts/font = ExtResource("1_iwahs")
theme_override_font_sizes/font_size = 67
text = "RETRY"

[node name="ShopButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 98.0
offset_top = 430.0
offset_right = 359.0
offset_bottom = 530.0
theme_override_fonts/font = ExtResource("1_iwahs")
theme_override_font_sizes/font_size = 67
text = "SHOP"

[connection signal="pressed" from="Panel/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/ShopButton" to="." method="_on_shop_button_pressed"]
